# DistributedDynamicProgrammingOpenMPI

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  benchmark_visual.ipynb  benchmark_visual.py  hostfile  main.cpp  todo.md  vi_processor_base.h  vi_processor_impl_distr_01.cpp  vi_processor_impl_distr_01.h  vi_processor_impl_local.cpp  vi_processor_impl_local.h
.ipynb_checkpoints/: benchmark_visual-checkpoint.py
Load_Data/: CMakeLists.txt  array.npy  main.cpp
data/: README.md  convert_pickle.ipynb  convert_pickle.py
data/data_debug/: P_data.npy  P_indices.npy  P_indptr.npy  P_shape.npy  README.md  convert_pickle.py  parameters.npy  parameters.npz  parameters.pickle  pi_star_alpha_0_99_iter_1000.npy  star_graph_data.npy  star_graph_indices.npy  star_graph_indptr.npy  star_types.npy  stars.npy
data/data_small/: J_star_alpha_0_99_iter_1000.npy  P_shape.npy  README.md  parameters.npz  parameters.pickle  pi_star_alpha_0_99_iter_1000.npy  star_graph_data.npy  star_graph_indices.npy  star_graph_indptr.npy  stars.npy
data_debug/: J_star_alpha_0_99_iter_1000.npy
data_import/: CMakeLists.txt  Makefile  README.md  main.cpp
data_import/lib/: CMakeLists.txt  Makefile  README.md
data_import/lib/cmake/: README.md
data_import/lib/inc/: Async_VI.h  README.md
data_import/lib/src/: Async_VI.cpp  README.md
data_small/: star_types.npy
install_files/: README.md
lib/: README.md
lib/cnpy/: CMakeLists.txt
results/: .gitignore  .gitkeep  23VI_Processor_Impl_Local.npz  26VI_Processor_Impl_Distr_01-10.npz  26VI_Processor_Impl_Distr_01-100.npz  26VI_Processor_Impl_Distr_01-50.npz  26VI_Processor_Impl_Distr_01-500.npz  26VI_Processor_Impl_Distr_02-10.npz  26VI_Processor_Impl_Distr_02-100.npz  26VI_Processor_Impl_Distr_02-50.npz  26VI_Processor_Impl_Distr_02-500.npz  26VI_Processor_Impl_Distr_03-10.npz  26VI_Processor_Impl_Distr_03-100.npz  26VI_Processor_Impl_Distr_03-50.npz  26VI_Processor_Impl_Distr_03-500.npz  26VI_Processor_Impl_Distr_04-10.npz  26VI_Processor_Impl_Distr_04-100.npz  26VI_Processor_Impl_Distr_04-50.npz  26VI_Processor_Impl_Distr_04-500.npz  26VI_Processor_Impl_Distr_05-10.npz  26VI_Processor_Impl_Distr_05-100.npz  26VI_Processor_Impl_Distr_05-50.npz  26VI_Processor_Impl_Distr_05-500.npz  README.md  benchmark_comm_period.py  benchmark_np.py  benchmark_visual.py
results/data_debug-2/: 23VI_Processor_Impl_Local.npz  26VI_Processor_Impl_Distr_01-10.npz  26VI_Processor_Impl_Distr_01-100.npz  26VI_Processor_Impl_Distr_01-2.npz  26VI_Processor_Impl_Distr_01-20.npz  26VI_Processor_Impl_Distr_01-5.npz  26VI_Processor_Impl_Distr_01-50.npz  26VI_Processor_Impl_Distr_01-500.npz  26VI_Processor_Impl_Distr_02-10.npz  26VI_Processor_Impl_Distr_02-100.npz  26VI_Processor_Impl_Distr_02-2.npz  26VI_Processor_Impl_Distr_02-20.npz  26VI_Processor_Impl_Distr_02-5.npz  26VI_Processor_Impl_Distr_02-50.npz  26VI_Processor_Impl_Distr_02-500.npz  26VI_Processor_Impl_Distr_03-10.npz  26VI_Processor_Impl_Distr_03-100.npz  26VI_Processor_Impl_Distr_03-2.npz  26VI_Processor_Impl_Distr_03-20.npz  26VI_Processor_Impl_Distr_03-5.npz  26VI_Processor_Impl_Distr_03-50.npz  26VI_Processor_Impl_Distr_03-500.npz  26VI_Processor_Impl_Distr_04-10.npz  26VI_Processor_Impl_Distr_04-100.npz  26VI_Processor_Impl_Distr_04-2.npz  26VI_Processor_Impl_Distr_04-20.npz  26VI_Processor_Impl_Distr_04-5.npz  26VI_Processor_Impl_Distr_04-50.npz  26VI_Processor_Impl_Distr_04-500.npz  26VI_Processor_Impl_Distr_05-10.npz  26VI_Processor_Impl_Distr_05-100.npz  26VI_Processor_Impl_Distr_05-2.npz  26VI_Processor_Impl_Distr_05-20.npz  26VI_Processor_Impl_Distr_05-5.npz  26VI_Processor_Impl_Distr_05-50.npz  26VI_Processor_Impl_Distr_05-500.npz
results/data_debug-4/: 23VI_Processor_Impl_Local.npz  26VI_Processor_Impl_Distr_01-10.npz  26VI_Processor_Impl_Distr_01-100.npz  26VI_Processor_Impl_Distr_01-2.npz  26VI_Processor_Impl_Distr_01-20.npz  26VI_Processor_Impl_Distr_01-5.npz  26VI_Processor_Impl_Distr_01-50.npz  26VI_Processor_Impl_Distr_01-500.npz  26VI_Processor_Impl_Distr_02-10.npz  26VI_Processor_Impl_Distr_02-100.npz  26VI_Processor_Impl_Distr_02-2.npz  26VI_Processor_Impl_Distr_02-20.npz  26VI_Processor_Impl_Distr_02-5.npz  26VI_Processor_Impl_Distr_02-50.npz  26VI_Processor_Impl_Distr_02-500.npz  26VI_Processor_Impl_Distr_03-10.npz  26VI_Processor_Impl_Distr_03-100.npz  26VI_Processor_Impl_Distr_03-2.npz  26VI_Processor_Impl_Distr_03-20.npz  26VI_Processor_Impl_Distr_03-5.npz  26VI_Processor_Impl_Distr_03-50.npz  26VI_Processor_Impl_Distr_03-500.npz  26VI_Processor_Impl_Distr_04-10.npz  26VI_Processor_Impl_Distr_04-100.npz  26VI_Processor_Impl_Distr_04-2.npz  26VI_Processor_Impl_Distr_04-20.npz  26VI_Processor_Impl_Distr_04-5.npz  26VI_Processor_Impl_Distr_04-50.npz  26VI_Processor_Impl_Distr_04-500.npz  26VI_Processor_Impl_Distr_05-10.npz  26VI_Processor_Impl_Distr_05-100.npz  26VI_Processor_Impl_Distr_05-2.npz  26VI_Processor_Impl_Distr_05-20.npz  26VI_Processor_Impl_Distr_05-5.npz  26VI_Processor_Impl_Distr_05-50.npz  26VI_Processor_Impl_Distr_05-500.npz
results/data_debug-6/: 23VI_Processor_Impl_Local.npz  26VI_Processor_Impl_Distr_01-10.npz  26VI_Processor_Impl_Distr_01-100.npz  26VI_Processor_Impl_Distr_01-2.npz  26VI_Processor_Impl_Distr_01-20.npz  26VI_Processor_Impl_Distr_01-5.npz  26VI_Processor_Impl_Distr_01-50.npz  26VI_Processor_Impl_Distr_01-500.npz  26VI_Processor_Impl_Distr_02-10.npz  26VI_Processor_Impl_Distr_02-100.npz  26VI_Processor_Impl_Distr_02-2.npz  26VI_Processor_Impl_Distr_02-20.npz  26VI_Processor_Impl_Distr_02-5.npz  26VI_Processor_Impl_Distr_02-50.npz  26VI_Processor_Impl_Distr_02-500.npz  (+21 more)
src/: README.md  vi_processor_base.cpp  vi_processor_base.h  vi_processor_impl_distr_01.cpp  vi_processor_impl_distr_01.h  vi_processor_impl_distr_02.cpp  vi_processor_impl_distr_02.h  vi_processor_impl_distr_03.cpp  vi_processor_impl_distr_03.h  vi_processor_impl_distr_04.cpp  vi_processor_impl_distr_04.h  vi_processor_impl_distr_05.cpp  vi_processor_impl_distr_05.h  vi_processor_impl_distr_42.cpp  vi_processor_impl_distr_42.h  vi_processor_impl_local.cpp  vi_processor_impl_local.h
(+235 files in other folders)
